--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -10,6 +10,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{float}
+%\usepackage[margin=1in]{geometry}
 
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
@@ -56,7 +57,7 @@
 \title{Numerisk Integration}
 \author{Søren Fritzbøger 3F\\
 HTX Hillerød - Erhversskolen Nordsjælland\\
-Vejleder: Stig og CHR}
+Vejledt af Stig Nørskov Jacobsen og Christian Reinhold}
 \renewcommand{\today}{2. Februar 2015}
 \maketitle
 
@@ -69,15 +70,16 @@ Compare the typeset output side-by-side with the input document.smøøre
 \newpage
 \section{Indledning}
 
-\section{Forklaring af numerisk integration}
 
+\section{Forklaring af numerisk integration}
+Numerisk integration kan også kaldes for tilnærmelsesvist bestemmelse af det bestemte integral $\int_{a}^{b}f(x)dx$.\footnote{\cite{numeriskintegration}} Normalt bruger man bestemte integraler til dette, men når funktionen er så avanceret, som f.eks. $f(x)=e^{-x^2}$, er det ikke muligt at bruge bestemt integration til at finde arealet.\footnote{\cite{2012matA}} Numerisk integration opdeler funktionen i mindre stykker, og udregner herefter arealet af stykkerne og finder summen. Der findes flere forskellige metoder til at udregne arealet. Blandt dem kan nævnes Midpunktsreglen, Trapezmetoden og Simpsons metode. Trapezmetoden og Simpsons metode, er de 2 der som regel er mest præcise, men det er selvfølgelig også de mest avancerede.
 
 
 \section{Trapezmetoden}
 \label{sec:trapezmetoden}
 Trapezmetoden er en af flere metoder til at finde areal under en funktion. Det er en af de mere præcise metoder, da den, i modsætning til højre-, venstre- og middelsum, laver en trapez og ikke en firkant.
 \subsection{Bevis for trapezmetoden}
-Ved at bruge trapezmetoden kan vi tilnærmelsesvist finde det bestemte integral, selv for funktioner, hvor man ikke direkte kan bestemme det bestemte integral. Et eksempel på dette er funktionen $f(x)=e^{-x^{2}}$.
+Ved at bruge trapezmetoden kan vi tilnærmelsesvist finde det bestemte integral, selv for funktioner, hvor man ikke direkte kan bestemme det bestemte integral.\footnote{\cite[s. 13]{2012matA}} Et eksempel på dette er funktionen $f(x)=e^{-x^{2}}$.\footnote{\cite[s. 12]{2012matA}}
 For at bestemme arealet under en funktion vil vi gerne nærme os det bestemte integral.
 \begin{equation}
 \int_{a}^{b}f(x)dx \nonumber
@@ -141,7 +143,7 @@ A &= \frac{h}{2}(f(x_0)+ f(x_1)) + \frac{h}{2}(f(x_1)+ f(x_2)) + \cdots + \frac{
 \\ &= h(\frac{1}{2}f(x_0) + \frac{1}{2}f(x_1)) + h(\frac{1}{2}f(x_1) + \frac{1}{2}f(x_2)) + \cdots + h(\frac{1}{2}f(x_{n-1}) + \frac{1}{2}f(x_n)) \nonumber
 \\ &= h \cdot \frac{1}{2}f(x_0) + h \cdot \frac{1}{2}f(x_1) + h \cdot \frac{1}{2}f(x_1) + h \cdot \frac{1}{2}f(x_2) + \cdots + h \cdot \frac{1}{2}f(x_{n-1}) + h \cdot \frac{1}{2}f(x_n) \nonumber
 \end{align}
-Dette bliver reduceret til formlen for trapezmetoden \eqref{eq:trapezmetoden}
+Dette bliver reduceret til formlen for trapezmetoden\footnote{\cite[s. 14]{2012matA}} \eqref{eq:trapezmetoden}
 \begin{align}
 \label{eq:trapezmetoden}
 \boxed{\int_{a}^{b}f(x) \approx \frac{h}{2}(f(x_0) + 2f(x_1) + \cdots + 2f(x_{n-1}) + f(x_n))} \\ \text{Hvor } h=\frac{b-a}{n} \nonumber
@@ -149,9 +151,9 @@ Dette bliver reduceret til formlen for trapezmetoden \eqref{eq:trapezmetoden}
 
 \section{Simpsons metode}
 \label{sec:simpsonsmetode}
-En anden metode til tilnærmelsesvist at udregne arealet under en funktion er simpsons-metoden, som virker ved at dele funktionen op i mindre parabler, man så finder arealet under. Denne metode er mere præcis end trapezmetoden\footnote{\cite[side 15]{2012matA}}, og giver derfor et resultat som oftest har en meget lille afvigelse fra det korrekte resultat, det bestemte integral.
+En anden metode til tilnærmelsesvist at udregne arealet under en funktion er simpsons-metoden, som virker ved at dele funktionen op i mindre parabler, man så finder arealet under. Denne metode er mere præcis end trapezmetoden\footnote{\cite[s. 15]{2012matA}}, og giver derfor et resultat som oftest har en meget lille afvigelse fra det korrekte resultat, det bestemte integral.
 \subsection{Bevis for Simpsons metode}
-Simpsons metode er som nævnt, en anden metode til tilnærmelsesvist at finde det bestemte integral, selv for funktioner, hvor man ikke direkte kan bestemme det bestemte integral. Med trapezmetoden, se afsnit \ref{sec:trapezmetoden}, brugte man en ret linje fra $f(a)$ til $f(b)$ i intervallet $[a;b]$, hvilket selvfølgelig ikke er helt præcis, da en funktion ikke nødvendigvis er ret. Med Simpsons metode opdeler man intervallet $[a;b]$ i en parabel ud fra 3 punkter, $a,b,c$. Disse tre punkter kan bruges til at opstille en simplere parabel, som vi så kan regne arealet under. Parablens ligning ser således ud: $y=ax^2+bx+c$
+Simpsons metode er som nævnt, en anden metode til tilnærmelsesvist at finde det bestemte integral, selv for funktioner, hvor man ikke direkte kan bestemme det bestemte integral. Med trapezmetoden, se afsnit \ref{sec:trapezmetoden}, brugte man en ret linje fra $f(a)$ til $f(b)$ i intervallet $[a;b]$, hvilket selvfølgelig ikke er helt præcis, da en funktion ikke nødvendigvis er ret. Med Simpsons metode opdeler man intervallet $[a;b]$ i en parabel ud fra 3 punkter, $a,b,c$.\footnote{\cite{simpsonsmetode}} Disse tre punkter kan bruges til at opstille en simplere parabel, som vi så kan regne arealet under. Parablens ligning ser således ud: $y=ax^2+bx+c$
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\linewidth]{Billeder/Simpsonsmetode}
@@ -159,13 +161,13 @@ Simpsons metode er som nævnt, en anden metode til tilnærmelsesvist at finde de
 \label{fig:simpsonsmetode}
 \end{figure}
 
-Figur \ref{fig:simpsonsmetode} viser hvilke punkter vores parabel går gennem når vi har intervallet $[a;b]$. Ligesom med trapezmetoden kan man opdele funktionen i $n$ antal dele. Til at starte med går vi ud fra at $n=2$, for at gøre det nemt.\emph{I afsnit \ref{sec:simpsonopdeling} bliver der viderebygget på Simpsons metode med flere intervaller.}
+Figur \ref{fig:simpsonsmetode} viser hvilke punkter vores parabel går gennem når vi har intervallet $[a;b]$. Ligesom med trapezmetoden kan man opdele funktionen i $n$ antal dele. Til at starte med går vi ud fra at $n=2$, for at gøre det nemt. \emph{I afsnit \ref{sec:simpsonopdeling} bliver der viderebygget på Simpsons metode med flere intervaller.}
 Som man også kan se på figuren bliver $[a;b]$ delt op i to, hvor $\triangle x=h$. Dette viser sig også i punkterne som henholdsvis er $(-h,y_0)$, $(0,y_1)$ og $(h,y_2)$. Intervallet $[a;b]$ opdeles i $n$ antal delintervaller, som for dette tilfælde er 2, hvilket giver afstanden h mellem vores punkter.
 \begin{align}
 h &= \frac{b-a}{n} \nonumber
 \\&= \frac{b-a}{2} &\text{Når } n=2
 \end{align}
-Vi ved at vores parabel går fra $-h$ til $h$ og at den har forskriften $y=ax^2+bx+c$. Dette simple udtryk for vores parabel kan vi bestemme det bestemte integral af, da vi ved at $f(x)=y$. Vi finder dermed det bestemte areal under en parabel med forskriften $y=ax^2+bx+c$ fra $-h$ til $h$
+Vi ved at vores parabel går fra $-h$ til $h$ og at den har forskriften $y=ax^2+bx+c$. Dette simple udtryk for vores parabel kan vi bestemme det bestemte integral af, da vi ved at $f(x)=y$. Vi finder dermed det bestemte integral under en parabel med forskriften $y=ax^2+bx+c$ fra $-h$ til $h$\footnote{Der er brugt regneregler for integralregning til at finde det bestemte integral for funktionen, som kan ses i bilag 1}
 \begin{align}
 \label{eq:integral-hh}
 A &=\int_{-h}^{h}f(x)dx \nonumber
@@ -223,7 +225,7 @@ A &= \frac{h}{3}(2ah^2+6c) \nonumber
 %De tre ligninger ser således ud:
 
 \subsubsection{Opdeling i flere delintervaller}
-Når vi deler vores interval op i flere delintervaller, dvs. at $n$ bliver større, kan vi finde summen af $n$ antal delintervaller mellem $[a;b]$. På figur \ref{fig:simpsonOpdeling} kan man se et eksempel på en opdeling med $n=2$, hvor vi faktisk har 2 parabler. En fra $y_0$ til $y_2$ gennem $y_1$ og en fra $y_2$ til $y_4$ gennem $y_3$.
+Når vi deler vores interval op i flere delintervaller, dvs. at $n$ bliver større, kan vi finde summen af $n$ antal delintervaller mellem $[a;b]$.\footnote{\cite[s. 15-16]{2012matA}} Vi skal bruge 2 delintervaller for at finde vores parabel, og derfor skal $n$ være lige.\footnote{\cite[s. 15-16]{2012matA}} På figur \ref{fig:simpsonOpdeling} kan man se et eksempel på en opdeling med $n=4$, hvor vi faktisk har 2 parabler. En fra $y_0$ til $y_2$ gennem $y_1$ og en fra $y_2$ til $y_4$ gennem $y_3$.
 \label{sec:simpsonopdeling}
 \begin{figure}[H]
 \centering
@@ -254,7 +256,7 @@ For at udlede dette til formlen for Simpsons metode, skal vi kigge nærmere på 
 A	&= \frac{h}{3}(f(x)_0 + 4f(x)_1 + f(x)_2) \qquad \qquad \qquad \qquad \quad \text{Hvor } f(x)=y \text{ og når } n = 2 \nonumber
 \\	&= \frac{h}{3}(f(x_0) + 4f(x_1) + f(x_2) + f(x_2) + 4f(x_3) + f(x_4)  	+ \cdots + f(x_{n-2}) + 4f(x_{n-1}) + f(x_n) ) \nonumber
 \end{align}
-Dette bliver reduceret til Simpsons metode \eqref{eq:simpsonsmetode}
+Dette bliver reduceret til Simpsons metode\footnote{\cite[s. 16]{2012matA}} \eqref{eq:simpsonsmetode}
 \begin{align}
 \label{eq:simpsonsmetode}
 \boxed{\int_{a}^{b} \approx \frac{h}{3}(f(x_0) + 4f(x_1) + 2f(x_2) + 4f(x_3) + \cdots + 2f(x_{n-2}) + 4f(x_{n-1}) + f(x_n) )}
@@ -271,7 +273,7 @@ Når man arbejder med algoritmer, er der nogle ting, som er meget vigtige at hav
 Jeg har brugt JavaScript til at opbygge mine algoritmer for Trapezmetoden og Simpsons metode. Fordelen ved JavaScript er at det kan køre i browseren, og det er derfor forholdsvist nemt for alle at køre. Samtidig er JavaScript et af de sprog, der har en mere simpel syntaks, så det er nemt at forstå, og det er derfor også meget tilgængeligt.
 
 \subsection{Effektivitetsoptimering i JavaScript}
-Når man skal skrive en algoritme, er det næsten umuligt ikke at have et såkaldt \emph{loop}. Et loop, løkke på dansk, er en kode, der kører så længe at en defineret erklæring passer. Den løkke jeg skal bruge til mine algoritmer, skal køre $n$ antal gange, altså den skal køre det antal gange, jeg har delt min funktion op i. I teorien kan n bevæge sig mod uendelig, men dette vil så også tage op mod uendelig tid. For at finde en 100\% præcis værdi af vores numeriske integration, kan vi godt risikere at vi kommer op på et delinterval på flere millioner. Derfor at det vigtigt at vi optimere løkken mest muligt, da det er en kode, der potentielt skal køre mange millioner gange. En måde at optimere løkken på er ved at vælge en while-løkke i stedet for en for-løkke. Et hurtigt eksperiment\footnote{\cite{forvswhile}} viser, at while-løkken i gennemsnit er en smule hurtige\footnote{Det skal nævnes at det ikke er et 100\% korrekt eksperiment, da andre processer fra computeren, kan have haft en rolle i beregningstiden. Hvis man dog fjerne de unormale resultater fra det samlede billede, er while-løkken stadig gennemsnitlig hurtigst.}. Samtidig udførte eksperimentet kun en meget simpel beregning, hvor den algoritme vi skal udregne, er meget mere avanceret. Derfor kan der være en stor besparing i tid og beregningskraft, hvis man bruger en while-løkke i stedet for en for-løkke.
+Når man skal skrive en algoritme, er det næsten umuligt ikke at have et såkaldt \emph{loop}. Et loop, løkke på dansk, er en kode, der kører så længe at en defineret erklæring passer. Den løkke jeg skal bruge til mine algoritmer, skal køre $n$ antal gange, altså den skal køre det antal gange, jeg har delt min funktion op i. I teorien kan n bevæge sig mod uendelig, men dette vil så også tage op mod uendelig tid. For at finde en 100\% præcis værdi af vores numeriske integration, kan vi godt risikere at vi kommer op på et delinterval på flere millioner. Derfor at det vigtigt at vi optimere løkken mest muligt, da det er en kode, der potentielt skal køre mange millioner gange. En måde at optimere løkken på er ved at vælge en while-løkke i stedet for en for-løkke. Et hurtigt eksperiment\footnote{\cite{forvswhile}} viser, at while-løkken i gennemsnit er en smule hurtigere\footnote{Det skal nævnes at det ikke er et 100\% korrekt eksperiment, da andre processer fra computeren, kan have haft en rolle i beregningstiden. Hvis man dog fjerner de meget afvigende resultater fra det samlede billede, er while-løkken stadig gennemsnitlig hurtigst.}. Samtidig udførte eksperimentet kun en meget simpel beregning, hvor den algoritme vi skal udregne, er meget mere avanceret. Derfor kan der være en stor besparelse i tid og beregningskraft, hvis man bruger en while-løkke i stedet for en for-løkke.
 
 
 \subsection{Opbygning af algoritmerne}
@@ -306,9 +308,9 @@ function udregnArealTrapezmetoden(a,b,n) {
 }
 \end{lstlisting}
 
-Min algoritme er opbygget som en funktion med variabler $a,b,n$. $a$ er startintervallet, $b$ er slutintervallet og $n$ er antal delintervaller, præcis som i formlen for Trapezmetoden. $h$ defineres præcis som i Trapezmetoden, dvs $h=\frac{b-a}{n}$. Variablen $funktion$ tager værdien fra et input der har id'et "funktion", som indeholder vores funktion formateret som JavaScript. Et eksempel på dette ses her for $f(x) = e^{x^2}$
+Min algoritme er opbygget som en funktion med variabler $a,b,n$. $a$ er startintervallet, $b$ er slutintervallet og $n$ er antal delintervaller, præcis som i formlen for Trapezmetoden. $h$ defineres præcis som i Trapezmetoden, dvs $h=\frac{b-a}{n}$. Variablen $funktion$ tager værdien fra et input der har id'et "funktion", som indeholder vores funktion formateret som JavaScript. Et eksempel på dette ses her for $f(x) = e^{-x^2}$
 \begin{lstlisting}
-Math.exp(Math.pow(x,2))
+Math.exp(Math.pow(-x,2))
 \end{lstlisting}
 Variablen $w$ er vores tæller som starter på 1. $x$ bliver sat til a, da vi skal substituere $x$ ind i vores funktion. På linje 8 udregnes arealet af $x_1$, som sker før vores løkke, som nævnt i analysen. På linje 9 starter vores løkke, som kører så længe w er mindre end n. Dvs. at løkken kører lige ind til vi når sidste punkt, $x_{n-1}$, så vi kan regne $x_n$ særskilt. Inde i løkken bliver x sat til længden af delintervallet, $h$ lagt sammen med sig selv, når vi finder den næste x-værdi i intervallet. Så udregnet arealet af delintervallet og ligges til variablen $areal$. Derefter lægger vi 1 til w, så den tæller op mod n.
 Efter løkken har kørt, sætter vi $x$ til at være vores sidste værdi, $b$, og regner arealet for det sidste delinterval. Til sidst ganges hele det udregnede delareal med $\frac{h}{2}$ for at finde det samlede areal. Funktionen returnerer arealet til sidst.
@@ -356,9 +358,9 @@ Igen er algoritmen opbygget som en funktion med intervallet $[a;b]$ og antal del
 Helt grundlæggende vil jeg 
 Når jeg skal vurdere nøjagtigheden, vil jeg både vurdere selve metoden og algoritmen. Hvis algoritmen er skrevet korrekt, burde der ikke være forskel på nøjagtigheden i forhold til metoden. Jeg vil undersøge nøjagtigheden ud fra resultatet af algoritmen/metoden opdelt i forskellige delintervaller, $n$, i forhold til det bestemte integral.
 \\Effektiviteten kan være svær at vurdere, da jeg ikke har noget at stille mine data op imod. Jeg har undersøgt hvor lang tid det tager, at køre algoritmen med forskellige delintervaller. Denne tid kan sammenlignes med nøjagtigheden af algoritmen, og ud fra det vil jeg vise en sammenhæng mellem præcision og hastighed.\\
-Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere avanceret end den anden. Den ene er $e^x$ og den anden $e^{x^2}$. Den anden funktion, $e^{x^2}$, er en af de funktioner man ikke kan bestemme det bestemte integral af, mens den første er simpel at bestemme. Til at bestemme arealet der er så tæt på det bestemte integral som muligt for $e^{x^2}$, har jeg brugt mathcad, som har givet den værdi der står i tabel \ref{tab:trapezmetodenex2} og \ref{tab:simpsonsmetodeex2}
+Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere avanceret end den anden. Den ene er $e^x$ og den anden $e^{-x^2}$. Den anden funktion, $e^{x^2}$, er en af de funktioner man ikke kan bestemme det bestemte integral af, mens den første er simpel at bestemme. Til at bestemme arealet der er så tæt på det bestemte integral som muligt for $e^{-x^2}$, har jeg brugt Mathcad\footnote{Mathcad bruger også Numerisk integration til at udregne arealet, men delintervallet i Mathcad er meget højt, og derfor går jeg ud fra at tallet er præcist nok til at sammenligne med.}, som har givet den værdi der står i tabel \ref{tab:trapezmetodenex2} og \ref{tab:simpsonsmetodeex2}
 \subsubsection{Nøjagtighed og effektivitet når $f(x)=e^x$}
-
+Funktionen $e^x$ er en forholdsvis simpel funktion, som er nem at bestemme integralet af. Hvis vi sammenligner resultater fra Trapezmetoden og Simpsons metode fra tabel \ref{tab:trapezmetodenex} og \ref{tab:simpsonsmetodeex}. Hvis vi kigger på nøjagtigheden af metoderne og algoritmerne, tegner der sig et klart billede. Simpsons metode er den mest præcise, og rammer allerede det bestemte integral ved $n=14$ som man kan se på tabel \ref{tab:simpsonsmetodeex}. Derimod skal Trapezmetoden bruge et antal delintervaller på hele 180, for at bestemme det korrekte areal.
 \begin{table}[H]
 	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^x$ i intervallet $[-1;3]$}
 	\label{tab:trapezmetodenex}
@@ -391,9 +393,14 @@ Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere 
 		\end{tabular}
 	\end{center}
 \end{table}
-\subsubsection{Nøjagtighed og effektivitet når $f(x)=e^{x^2}$}
+Hvis man kigger på effektiviteten af algoritmerne, altså hvor stor beregningstid de har, kan man se at trapezmetoden er hurtigere per delinterval. Dog skal den bruge 0.088ms for at finde det korrekte areal, mod 0.050ms for Simpsons metode.
+\\
+Ud fra disse observationer og resultaterne fra tabel \ref{tab:trapezmetodenex} og \ref{tab:simpsonsmetodeex} kan vi sige, at Trapezmetoden har den korteste beregningstid per delinterval, men at Simpsons metoden er mest effektiv, og giver det mest nøjagtige resultat når $f(x)=e^x$.
+
+\subsubsection{Nøjagtighed og effektivitet når $f(x)=e^{-x^2}$}
+$f(x)=e^{-x^2}$ er en del mere avanceret funktion end $e^x$. Dette kan man også se på tabel \ref{tab:trapezmetodenex2} og \ref{tab:simpsonsmetodeex2}, da Simpsons metoden først finder det rigtige resultat ved $n=252$. Dog har trapezmetoden problemer ved at finde det korrekte areal, da den selv ved 2000 delintervaller, stadig ikke har fundet det Mathcad-udregnede areal.
 \begin{table}[H]
-	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\caption {Nøjagtighed af Trapezmetoden for $f(x)=e^{-x^2}$ i intervallet $[-1;3]$} 
 	\label{tab:trapezmetodenex2}
 	\begin{center}
 		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
@@ -413,7 +420,7 @@ Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere 
 \end{table}
 
 \begin{table}[H]
-	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^{x^2}$ i intervallet $[-1;3]$} 
+	\caption {Nøjagtighed af Simpsons metode for $f(x)=e^{-x^2}$ i intervallet $[-1;3]$} 
 	\label{tab:simpsonsmetodeex2}
 	\begin{center}
 		\begin{tabular}{|c|r@{.}l|r @{.} l|l|}
@@ -430,46 +437,43 @@ Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere 
 		\end{tabular}
 	\end{center}
 \end{table}
+Igen er trapezmetoden den hurtigste per delinterval, men det bliver overskygget af Simpsons metode til at udregne det nøjagtige resultat hurtigst og ved færrest delintervaller.
+\\\\
+Alt i alt kan man med sikkerhed sige, at Simpsons metode både er den mest nøjagtige og effektive metode. Den er både hurtigst til at finde det rigtige resultat, og finder også det rigtige resultat ved færre delintervaller.
 
-\section{Perspektivering}
 \section{Konklusion}
+I denne opgave har jeg kort forklaret om numerisk integration og redegjort for de to numeriske metoder Trapezmetoden og Simpsons metode. Derudover har jeg omsat metoderne til en computer algoritme, hvor jeg har vurderet effektiviteten og nøjagtigheden af både metoden og algoritmen.
 
 \clearpage
 \addcontentsline{toc}{section}{Litteratur}
 \begin{thebibliography}{9}
-
-\bibitem{JohnsonUtah}
-  	Christopher R. Johnson,
-  	\emph{Denne kilde er et dokument med beviser, beskrivelse og andet af numerisk integration.}.\\
-  	Hamlet Project, 
-  	Department of Computer Science,
-	University of Utah,
-	\url{http://www.cs.utah.edu/~zachary/computing/lessons/uces-13/uces-13/contents-node1.html}
+\bibitem{numeriskintegration}
+	Den Store Danske - Mogens Esrom Larsen,
+	\emph{Numerisk Integration}
+	\url{http://www.denstoredanske.dk/It,_teknik_og_naturvidenskab/Matematik_og_statistik/It_og_numerisk_analyse/numerisk_integration}
 	
-\bibitem{html5canvas}
-	@mattmight,
-	\emph{En ``tutorial'' der viser hvordan man tegner en graf vha. html5 og canvas}.\\
-	http://matt.might.net/articles/rendering-mathematical-functions-in-javascript-with-canvas-html/
 
-\bibitem{au}
-	Aalborg Universitet,
-	\emph{Et foredag fra Aalborg Universitet omhandlende Numerisk Integration}.\\
-	http://staff.iha.dk/jse/bioproces/Forelaesningsnoter/BI1MAT1/\\Numeriske\%20metoder\%201.pdf
+\bibitem{simpsonsmetode}
+	Interactive Maths - Murray Bourne,
+	\emph{Simpson's Rule}
+	\url{http://www.intmath.com/integration/6-simpsons-rule.php}
 	
 \bibitem{2012matA}
 	Undervisningsministeriet,
-	\emph{Forberedelse til Matematik A højere teknisk eksamen 2012},
+	\emph{Forberedelse til Matematik A højere teknisk eksamen 2012}
 	\url{http://uvm.dk/~/media/UVM/Filer/Udd/Gym/PDF12/Proever\%20og\%20eksamen/120608\%20Mat\%20A\%20htx\%20Forberedelsesmateriale.pdf}
 	
 \bibitem{version2:algoritme}
 	Version2.dk - Klaus Hansen og Casper Thomsen,
-	\emph{Leksikon: Algoritme},
+	\emph{Leksikon: Algoritme}
 	\url{http://www.version2.dk/leksikon/Algoritme}
+	
 \bibitem{denstoredanske:algoritme}
 	Den Store Danske - Jens Clausen og senere af Uffe Rasmussen,
 	\emph{Algoritme}
 	\url{http://www.denstoredanske.dk/It,_teknik_og_naturvidenskab/Informatik/Software,_programmering,_internet_og_webkommunikation/algoritme}
 \bibitem{forvswhile}
+
 	Stoimen's web log,
 	\emph{JavaScript Performance: for vs. while}
 	\url{http://www.stoimen.com/blog/2012/01/24/javascript-performance-for-vs-while/}
@@ -477,7 +481,11 @@ Jeg har udvalgt 2 funktioner som minder om hinanden, dog er den ene en del mere 
 
 \section{Kildekritik}
 \section{Bilag}
-Her skal være regnereglerne for integralregning
+\subsection{Bilag 1 - Regneregler for integralregning}
+\begin{center}
+	\includegraphics[width=0.9\linewidth]{Billeder/Integralregneregler}
+\end{center}
+
 
 
 \end{document}
